# gst_billing

./: .coveragerc  .cursorignore  .cursorrules  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CURRENT_TASK.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.pip  LICENSE  PROJECT_ROADMAP.md  README.md  TECH_STACK.md  build_docker.sh  check_errors.sh  create_superuser.py  deploy.sh  disable_debug.sh  docker-compose.dev.yml  docker-compose.pip.yml  docker-compose.yml  enable_debug.sh  macos_start_program.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  renew_certs.sh  requirements.txt  ruff.toml  run_dev_pip.sh  run_docker.sh  run_prod_pip.sh  setup_react.sh  tailwind.config.js  update_env.sh  (+3 more)
.circleci/: config.yml
.claude/: launch.json
.github/workflows/: docker-publish.yml  test.yml
billing/: admin.py  apps.py  constants.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
billing/api/: mixins.py  permissions.py  serializers.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_business_landline_number_business_mobile_number_and_more.py  0003_alter_business_options_alter_customer_mobile_number_and_more.py  0004_remove_invoice_line_items_lineitem_invoice.py  0005_remove_customer_business_customer_business.py  0006_rename_business_customer_businesses.py  0007_alter_customer_address_alter_customer_gst_number.py  0008_invoice_invoice_date.py  0009_alter_customer_name.py  0010_historicalinvoice.py  0011_lineitem_gst_tax_rate_lineitem_igst_and_more.py  0012_historicalinvoice_type_of_invoice_and_more.py  0013_remove_business_landline_number_and_more.py  0014_business_pan_number.py  0015_business_state_name_customer_state_name.py  0016_business_primary_color_theme.py  0017_product.py  0018_alter_historicalinvoice_type_of_invoice_and_more.py  0019_product_hsn_code.py  0020_product_gst_tax_rate.py  0021_add_unit_textchoices.py  0021_add_workspace_id_to_abstract_base.py  0022_business_signature_image.py  0022_product_default_unit.py  0023_lineitem_unit.py  0024_alter_lineitem_unit_auditlog.py  0025_auditlog_snapshot_alter_auditlog_action.py  0026_business_email_customer_email.py  0027_business_invoice_prefix.py  0028_historicalinvoice_distance_km_and_more.py  0029_itcreclaimledger.py  0030_historicalinvoice_source_file_invoice_source_file.py  0031_historicalinvoice_source_preview_and_more.py
billing/services/: gstr2a_import.py
billing/templates/: base.html  business_detail.html  business_list.html  category_cards.html  customer_detail.html  customer_list.html  invoice_detail.html  invoice_list.html  line_item_detail.html  line_item_invoice_list.html  nav_bar.html  product_list.html  reports.html
billing/templatetags/: custom_filters.py
billing/tests/: run_tests.py  test_audit_log.py  test_base.py  test_business_api.py  test_csv_import.py  test_customer_api.py  test_invoice_api.py  test_line_item_api.py  test_line_item_invoice_total.py  test_product_api.py  test_report_api.py  test_report_view.py
deploy/: README.md
deploy/backend/: .env.template  Dockerfile  docker-compose.yml  production_settings_overlay.py
deploy/frontend/: AuthContext.tsx  _redirects  api.ts  build.sh  vite-env.d.ts
deploy/patches/: custom_jwt_serializer.py  custom_jwt_view.py  urls_patch.py
docs/: CACHING.md
e2e-tests/: package-lock.json  package.json  playwright.config.js
e2e-tests/tests/: _auth.setup.js  crud.spec.js  login.spec.js  navigation.spec.js  utils.js
frontend/: urls.py  views.py
frontend/src/: App.js  index.css  index.js
gst_billing/: asgi.py  ci_settings.py  production_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
nginx/: Dockerfile
nginx/conf.d/: app.conf
static/css/: common.css  styles.css
static/frontend/: main.js  main.js.LICENSE.txt
staticfiles/css/: common.css  styles.css
sweet-rebuild-suite-main/: TODO.md  capacitor.config.ts  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+249 files in other folders)
