[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-billing"
version = "0.1.0"
description = "GST Billing Application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "django==4.2.2",
    "django-cors-headers==4.3.1",
    "django-crispy-forms==1.14.0",
    "django-htmx==1.12.0",
    "django-simple-history==3.2.0",
    "django-sql-explorer==3.0.1",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "freezegun>=1.5.1",
    "ipython>=8.14.0",
    "num2words>=0.5.14",
    "openpyxl==3.0.10",
    "pre-commit>=2.19.0",
    "psycopg2-binary>=2.9.6",
    "requests>=2.28.1",
    "pandas>=2.0.2",
    "pillow>=9.5.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "setuptools>=61.0",
    "xlsxwriter==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "coverage",
    "black",
    "isort",
    "flake8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gst_billing.ci_settings"
python_files = "test_*.py"
testpaths = ["billing/tests"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
