[project]
name = "gst-billing"
version = "0.1.0"
description = "GST Billing Application"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "django==4.2.2",
    "django-cors-headers==4.3.1",
    "django-crispy-forms==1.14.0",
    "django-htmx==1.12.0",
    "django-simple-history==3.2.0",
    "django-sql-explorer==3.0.1",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "freezegun>=1.5.1",
    "ipython>=8.14.0",
    "num2words>=0.5.14",
    "openpyxl==3.0.10",
    "pre-commit>=2.19.0",
    "psycopg2-binary>=2.9.6",
    "requests>=2.28.1",
    "pandas>=2.0.2",
    "pillow>=9.5.0",
    # iPhone photos default to HEIC; pillow-heif registers a Pillow opener
    # so AIInvoiceProcessor / GSTR-2A flows can read .heic uploads. Always
    # re-encoded to JPEG before going to Gemini.
    "pillow-heif>=0.21.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "setuptools>=61.0",
    "xlsxwriter==3.0.3",
    "django-cacheops>=7.1",
    "python-dotenv>=1.1.0",
    "pip-system-certs>=4.0",
    "google-genai>=1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "coverage",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Use setuptools package discovery scoped to our two top-level Python
# packages. The repo has several non-Python top-level dirs (frontend,
# nginx, sweet-rebuild-suite-main, etc.) so flat auto-detection fails;
# `include` keeps it scoped while still picking up subpackages like
# billing.api, billing.management, billing.management.commands, etc.
[tool.setuptools.packages.find]
include = ["billing*", "gst_billing*"]
exclude = ["billing.tests*", "node_modules*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gst_billing.test_settings"
python_files = "test_*.py"
testpaths = ["billing/tests"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
